--- a/Lesson9-css/4styling.css
+++ b/Lesson9-css/4styling.css
@@ -9,5 +9,5 @@
     box-shadow: 9px 9px 8px; color: red;
  }
  #indent{
-    text-indent: 20%; color: dark rgb(240, 6, 6); font-size: 15px;
+    text-indent: 20% ; font-size: 15px;
  }
